# store_front_django_microservice

gateway-service/: compose.yaml
inventory-service/: .env.dev  db.sqlite3  pyproject.toml
inventory-service/config/: settings.py  urls.py
inventory-service/inventory/: consumers.py  models.py  serializers.py  urls.py  views.py
inventory-service/inventory/management/commands/: start_consume.py
inventory-service/inventory/migrations/: 0001_initial.py  0002_alter_inventory_product_id.py
order-service/: db.sqlite3  pyproject.toml
order-service/config/: settings.py  urls.py
order-service/order/: models.py  serializers.py  views.py
order-service/order/migrations/: 0001_initial.py
rabbitmq_service/: .env.dev  compose.yaml
registry-service/: compose.yaml
registry-service/config/: server.json
registry-service/data/: checkpoint-signature  node-id  server_metadata.json
registry-service/data/raft/: raft.db
registry-service/data/serf/: local.snapshot  remote.snapshot
